package vehicle;

public interface AutonomousCapable {
    boolean supportsSelfDrive();
}
